@@ -1,3 +1,9 @@
+2004-04-12  J. Brobecker  <brobecker@gnat.com>
+
+	* gdb.base/sep.c: New file.
+	* gdb.base/sep-proc.c: New file.
+	* gdb.base/sep.exp: New testcase.
+
 2004-04-09  Mark Kettenis  <kettenis@gnu.org>
 
 	* gdb.base/bigcore.exp: Disable on Solaris; no sparse core file
